# ai-chatbot-nlp

./: .editorconfig  .env.example  .gitignore  DEMO_GUIDE.txt  DESIGN_FEATURES.txt  Dockerfile  FINAL_SUMMARY.txt  GITHUB_README.md  Makefile  PROJECT_INFO.txt  QUICK_START.txt  README.md  START.bat  TROUBLESHOOTING.txt  app.py  chatbot.py  config.yaml  docker-compose.yml  nlp_utils.py  pyproject.toml  requirements.txt  setup.py  status_check.py  streamlit_app.py  test_chatbot.py  train_model.py
data/: training_samples.json
src/: __init__.py  chatbot.py
src/nlp/: __init__.py  conversation_manager.py  dialogue_state_tracker.py  entity_extractor.py  intent_classifier.py  preprocessor.py
src/utils/: config_loader.py
static/: sw.js
static/css/: style.css
static/js/: chat.js  main.js
templates/: base.html  dashboard.html  demo.html  error.html  index.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_intent_classifier.py
